add some annotation in part 1 and 2